<resources>
    <string name="app_name">CheckerApp</string>

    <!--    used in: layout\activity_actual_status.xml-->
    <string name="actual_state_title">Actual State</string>

    <!--    used in: layout\activity_change_status.xml-->
    <string name="current_state">Current in/out status</string>
    <string name="checked_in_out_ph">Checked in/out PH</string>
    <string name="checkbox_placeholder">Checkbox Placeholder</string>
    <string name="reason_field_optional">type reason here (optional)</string>
    <string name="reason_field_to_check_in">you need to  check in at the location. \n you can\'t check in via the app.</string>
    <string name="check_me_in">Check me in</string>
    <string name="check_me_out">Check me out</string>
    <string name="checked_status">You are checked: %1$s</string>

    <!--    used in: layout\activity_register.xml-->
    <string name="placeholder_image">Placeholder Image</string>
    <string name="register_an_account">Register an account</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="employee_id">Employee ID</string>
    <string name="pass_id">Pass ID</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="confirm">Confirm</string>

    <!--    used in: layout\activity_history.xml-->
    <string name="status"><b>Status:</b> %1$s</string>
    <string name="last_checked_in_date"><b>Last checked in date: </b> %1$s</string>
    <string name="last_checked_out_date"><b>Last checked out date: </b>%1$s</string>
    <string name="current_status_button">Status</string>
    <string name="change_status_button">Change</string>
    <string name="status_history_button">History</string>
    <string name="reason">Reason: %1$s</string>

    <!--    used in: layout\activity_login.xml-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">No Account? Click here!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
