<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clChangeStatus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.change.ChangeActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/current_state"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/llCurrentStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llCurrentStatus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tilReason"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/tvCurrentStatusText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical|left|start"
            android:hint="@string/checked_in_out_ph"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <ImageView
            android:id="@+id/ivStatusPlaceHolder"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/checkbox_placeholder" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilReason"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edit_text_background"
        android:hint=" "
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCurrentStatus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/reason_field_optional"
            android:inputType="textMultiLine"
            android:lines="5"
            android:minLines="5"
            android:scrollHorizontally="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnChangeState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@color/colorAccent"
        android:text="@string/check_me_out"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        layout="@layout/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>