<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clActualStatus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.current.CurrentActivity">

    <TextView
        android:id="@+id/tvActualTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:text="@string/actual_state_title"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llActualStatus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActualTitle">

        <TextView
            android:id="@+id/tvActualStatusText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical|left|start"
            android:hint="@string/checked_in_out_ph"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <ImageView
            android:id="@+id/ivActualStatusPlaceHolder"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/checkbox_placeholder" />
    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>